syntax = "proto3";

option csharp_namespace = "GrpcClientApp";

service Filer {
    rpc UploadFile(stream FileUploadRequest) returns (FileUploadResponse);
}

message FileUploadRequest{
    FileModel File = 1;
}
message FileUploadResponse{
    int32 code= 1;
    string message = 2;
    int32 time_load = 3;
}

message FileModel{
    bytes file_bytes = 1;
}